fix: changed margin on captions, to prevent shadow overlap while animate

--- a/css/styles.css
+++ b/css/styles.css
@@ -105,7 +105,7 @@ body {
 }
 
 .caption {
-  margin: 10px 0;
+  margin: 25px 0;
   text-align: center;
   font-family: 'staatliches', cursive;
   font-size: 40px;
